--- a/src/MainApp/MainWindow.xaml
+++ b/src/MainApp/MainWindow.xaml
@@ -68,6 +68,17 @@
                         </fluent:Button.ToolTip>
                     </fluent:Button>
                 </fluent:RibbonGroupBox>
+                
+                <fluent:RibbonGroupBox Header="HSI显示">
+                    <fluent:Button KeyTip="1"
+                                   Header="HSI显示图像" Click="HSI_Click">
+                        <fluent:Button.ToolTip>
+                            <fluent:ScreenTip Title="遥感图像HSI显示"
+                                              Image=".\Images\norm\64\help.png"
+                                              Text="很好用！"/>
+                        </fluent:Button.ToolTip>
+                    </fluent:Button>
+                </fluent:RibbonGroupBox>
 
             </fluent:RibbonTabItem>
 
