--- a/src/MainApp/MainWindow.xaml
+++ b/src/MainApp/MainWindow.xaml
@@ -204,7 +204,7 @@
             <fluent:RibbonTabItem Header="平滑·锐化·形态学" KeyTip="D">
 
                 <fluent:RibbonGroupBox Header="图像平滑与锐化" KeyTip="a">
-                    <fluent:Button Name="ButtonSmooth" KeyTip="1" Header="图像平滑" >
+                    <fluent:Button Name="ButtonSmooth" KeyTip="1" Header="图像平滑" Click="ButtonSmooth_Click" >
                         <fluent:Button.ToolTip>
                             <fluent:ScreenTip Title="图像的平滑"
                                               Image=".\Images\norm\64\help.png"
