--- a/src/TransPic/Basic/Loading.xaml
+++ b/src/TransPic/Basic/Loading.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="RS_Diag.Loading"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Loading" Height="70" Width="70" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStyle="None" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Topmost="True" Background="Transparent" AllowsTransparency="True" >
-    <Grid Width="64" Height="64">
+        Title="Loading" Height="70" Width="70" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStyle="None" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Topmost="True" AllowsTransparency="True" Background="#66FFFFFF" >
+    <Grid Width="64" Height="64" >
         <Grid.Resources>
             <DrawingBrush x:Key="brush" Stretch="None" AlignmentX="Center" AlignmentY="Top">
                 <DrawingBrush.Drawing>
