--- a/src/TransPic/Basic/Loading.xaml
+++ b/src/TransPic/Basic/Loading.xaml
@@ -1,76 +1,76 @@
 ﻿<Window x:Class="RS_Diag.Loading"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Loading" Height="70" Width="70" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStyle="None" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Topmost="True" AllowsTransparency="True" Background="#66FFFFFF" >
-    <Grid Width="64" Height="64" >
+        Title="Loading" Height="60" Width="60" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ShowInTaskbar="False" Topmost="True" Background="#E5FFFFFF" AllowsTransparency="True" WindowStyle="None" IsHitTestVisible="False" IsTabStop="False" >
+    <Grid Width="50" Height="50" VerticalAlignment="Center" Margin="0,0,0,0" >
         <Grid.Resources>
             <DrawingBrush x:Key="brush" Stretch="None" AlignmentX="Center" AlignmentY="Top">
                 <DrawingBrush.Drawing>
                     <GeometryDrawing Brush="Black">
                         <GeometryDrawing.Geometry>
-                            <EllipseGeometry RadiusX="3" RadiusY="11"/>
+                            <EllipseGeometry RadiusX="4" RadiusY="4"/>
                         </GeometryDrawing.Geometry>
                     </GeometryDrawing>
                 </DrawingBrush.Drawing>
             </DrawingBrush>
         </Grid.Resources>
 
-        <Rectangle x:Name="r01" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r01" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="0"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r02" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r02" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="30"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r03" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r03" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="60"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r04" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r04" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="90"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r05" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r05" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="120"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r06" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r06" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="150"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r07" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r07" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="180"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r08" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r08" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="210"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r09" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r09" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="240"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r10" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r10" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="270"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r11" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r11" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="300"/>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle x:Name="r12" Fill="{StaticResource brush}" Opacity="0.2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle x:Name="r12" Fill="{StaticResource brush}" Opacity="0.8" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="330"/>
             </Rectangle.RenderTransform>
